--- a/Swagger/src/main/webapp/swagger.html
+++ b/Swagger/src/main/webapp/swagger.html
@@ -57,16 +57,16 @@ definitions:
         $ref: '#/definitions/AnyDto'
     type: object
 externalDocs:
-  description: anyDescription
-  url: http://www.anyUrl.com
-host: anyHost
+  description: Unknown
+  url: Unknown
+host: Unknown
 info:
   contact:
     email: fslichen863@gmail.com
-  description: anyDescription
-  termsOfService: http://swagger.io/terms/
-  title: anyTitle
-  version: 1.0.0
+  description: Unknown
+  termsOfService: Unknown
+  title: Unknown
+  version: Unknown
 paths:
   /evolution/0:
     post:
@@ -126,8 +126,8 @@ schemes:
 - http
 swagger: '2.0'
 tags:
-- description: anyDescription
+- description: Unknown
   externalDocs:
-    description: anyDescription
-    url: http://www.anyUrl.com
-  name: anyName
+    description: Unknown
+    url: Unknown
+  name: Unknown
